src/app.scss
/* ... */
.tabulator {
  border-radius: $radius;
}

.tabulator-col {
  padding: 0.5rem;
}

// override message style

.message {
  @each $name, $components in $message-colors {
    $color: nth($components, 1);
    $color-invert: nth($components, 2);
    $color-light: null;
    $color-dark: null;

    @if length($components) >= 3 {
      $color-light: nth($components, 3);
      @if length($components) >= 4 {
        $color-dark: nth($components, 4);
      } @else {
        $color-luminance: colorLuminance($color);
        $darken-percentage: $color-luminance * 70%;
        $desaturate-percentage: $color-luminance * 30%;
        $color-dark: desaturate(darken($color, $darken-percentage), $desaturate-percentage);
      }
    } @else {
      $color-lightning: max((100% - lightness($color)) - 2%, 0%);
      $color-light: lighten($color, $color-lightning);
    }

    &.invertable.is-#{$name} {
      background-color: transparent;
      border: 1px solid rgba($color, 0.6);

      .message-header {
        background-color: rgba($color, 0.15);
        color: $black-ter;
      }
      .message-body {
        color: $text;
        background: $white-bis;
        border: none;
      }
    }
  }
}

// daisy UI color override
.du-tabs {
  --rounded-btn: #{$radius};
  background-color: $grey-lightest !important;

  .du-tab {
    color: $grey-dark !important;

    &.du-tab-active {
      background-color: $white !important;
      color: $black-bis !important;
    }
  }
}

.du-menu {
  summary:after {
    color: $link;
  }

  a,
  summary {
    border-radius: $radius-small;
    color: $grey-dark;
  }

  a:hover,
  summary:hover {
    background-color: $white-ter !important;
  }

  a.du-active {
    color: $link !important;
    background-color: $white !important;
    font-weight: bold;
  }
}

.du-range {
  --range-shdw: var(--fallback-bc, oklch(var(--nc) / 1));
}

.modal-background {
  background-color: rgba(0, 0, 0, 0.86);
}

:focus {
  outline: 0;
}

html,
body {
  background: $white-bis;
  background-image: radial-gradient(rgba($grey-light, 0.2) 1px, $white-bis 1px);
  background-size: 20px 20px;
  min-height: 100vh;
}

html {
  overflow-x: hidden;
}

@include mobile {
  // Ensure minimum 44px touch targets on mobile
  .select.is-small select {
    min-height: 44px;
    font-size: $body-size;
  }

  .button.is-small {
    min-height: 44px;
    padding-left: 0.75em;
    padding-right: 0.75em;
    font-size: $body-size;
  }
}

.is-primary-color {
  color: #b388ff;
  font-weight: bold;

  &:hover {
    color: #b388ff;
  }
}

.secondary-link {
  color: $grey-dark;
  &:hover {
    color: $link;
    text-decoration: underline;
  }
}

.tab-journal .table td {
  border: 1px solid rgba($grey-lightest, 0.5);
}

.table.is-light-border tbody {
  td,
  th {
    border-bottom: 1px solid rgba($grey-lightest, 0.5);
  }
}

.table tr.is-sub-header {
  background-color: $white-ter;
}

.table.has-sticky-column tbody tr.is-sub-header th:first-child {
  background-color: $white-ter;
}

code {
  color: $grey-darker;
}

.progress.is-extra-small {
  height: 0.3rem;
}

.inline-text text {
  font-size: 0.857rem;
  font-weight: bold;
}

.is-not-visible {
  visibility: hidden;
}

.is-bordered-bottom {
  border-bottom: 1px solid $grey-lighter;
}

.is-bordered-top {
  border-top: 1px solid $grey-lighter;
}

.is-bordered-right {
  border-right: 1px solid $grey-lighter;
}

.is-bordered-left {
  border-left: 1px solid $grey-lighter;
}

.is-bordered.is-link {
  border: 2px solid $link;
}

svg text {
  font-family: $family-sans-serif-icon;
}

.svg-text-grey-lighter {
  fill: $grey-lighter;
}

.has-background-grey-lightest {
  background-color: $grey-lightest;
}

.svg-text-grey-light {
  fill: $grey-light;
}

.svg-text-shadow {
  text-shadow: 0px 0px 2px $white;
}

.svg-text-grey {
  fill: $grey;
}

.svg-text-black {
  fill: $black;
}

.svg-text-black-ter {
  fill: $black-ter;
}

.svg-text-black-bis {
  fill: $black-bis;
}

.svg-text-grey-darker {
  fill: $grey-darker;
}

.svg-text-grey-dark {
  fill: $grey-dark;
}

.svg-text-success {
  fill: $success;
}

.svg-text-danger {
  fill: $danger;
}

.svg-text-warning-dark {
  fill: $warning-dark;
}

.svg-grey-light {
  stroke: $grey-light;
}

.svg-grey-lighter {
  stroke: $grey-lighter;
}

.svg-grey-lightest {
  stroke: $grey-lightest;
}

.svg-grey {
  stroke: $grey;
}

.svg-grey-dark {
  stroke: $grey-dark;
}

.svg-grey-lighter {
  stroke: $grey-lighter;
}

.is-size-6-5 {
  font-size: 0.85rem !important;
}

.axis {
  font-family: $family-sans-serif-icon;

  &.dark text {
    fill: $grey;
    font-size: 0.857rem;
  }

  &.is-large text {
    font-size: 1.25rem;
  }

  &.link text {
    fill: $link;
    font-size: 0.857rem;
    cursor: pointer;
  }

  text {
    font-size: 0.714rem;
    fill: $grey-light;
  }

  path.domain,
  line {
    fill: none;
    stroke: $grey-lighter;
    shape-rendering: crispEdges;
  }

  &.light-domain {
    path.domain {
      stroke: $grey-lightest;
    }
  }

  .tick line {
    stroke: $white-ter;
    shape-rendering: crispEdges;
  }

  &.y {
    line {
      stroke: $white-bis;
    }

    path.domain {
      display: none;
    }

    &.keep-domain path.domain {
      display: block;
    }
  }
}

.g-arrow path {
  opacity: 0.4;
  stroke: $black !important;
}

.g-arrow path.arrow-head {
  fill: $black !important;
}

.g-arrow.is-light path {
  opacity: 1;
  stroke: $grey-light !important;
  fill: $grey-light !important;
}

.legend-label {
  text-transform: capitalize;
  text-align: center;
  line-height: 1rem;
}

.legend-box.selected {
  background-color: $grey-lightest;
  border-radius: $radius;
}

#d3-salary-timeline .x.axis > g.tick {
  display: none;
}

#d3-salary-timeline .x.axis > g.tick:nth-child(3n-1) {
  display: inline;
}

.box.is-selected {
  box-shadow: $shadow;
}

.box.box-r-none {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.box.box-l-none {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}
/* ... */

